--- a/config.json
+++ b/config.json
@@ -136,8 +136,8 @@
             {
                 "name": "ljspeech",
                 "path": "/content/drive/My Drive/",
-                "meta_file_train": "metadata.csv",
-                "meta_file_val": null
+                "meta_file_train": "metadata_train.csv",
+                "meta_file_val": "metadata_val.csv"
             }
         ]
 
